syntax = "proto3";
package d4l.mex.codings;

option go_package = "github.com/d4l-data4life/mex/mex/shared/codings;codings";

import "google/protobuf/any.proto";

message BlobStoreCodingsetSourceConfig {
  string blob_name = 1;
  string blob_type = 2;
}

message CodingsetSource {
  string name = 1;
  google.protobuf.Any config = 2;
}

message CodingsetSources {
  repeated CodingsetSource codingset_sources = 1;
}
